# embedded-sos-filters

./: .dockerignore  .gitignore  Dockerfile  LICENSING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
lib/include/: sos_filter.h  sos_filter_cla.h
lib/source_c/: sos_filter.c
lib/source_cla/: sos_filter_cla.cla
tests/: conftest.py  test_conversion.py  test_header_generation.py  test_lib_compile.py  test_lib_golden.py  test_prepare_roundtrip.py  test_validate.py
tests/apply/: apply_filter_order10_block.c  apply_filter_order10_sample.c  apply_filter_order4_block.c  apply_filter_order4_sample.c  apply_filter_order7_block.c  apply_filter_order7_sample.c
tests/data/: c28x_types.h  cla_types.h  filter_order10.csv  filter_order4.csv  filter_order7.csv  mcu_types.h
tools/: codegen.py  convert.py  pipeline_gui.py  plot_golden.py  prepare.py  prepare_gui.py  validate.py
