[project]
name = "sos-filter"
version = "0.1.0"
description = "Embedded filter manager"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyfda",
    "numpy",
    "scipy",
    "matplotlib",
    "PyQt5",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
